--- a/debian/control
+++ b/debian/control
@@ -1,25 +1,65 @@
 Source: lsb
 Section: misc
 Priority: extra
-Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
-XSBC-Original-Maintainer: Chris Lawrence <lawrencc@debian.org>
-Build-Depends: debhelper (>> 7), po-debconf (>= 0.5.0), dpkg-dev (>= 1.10), python-all-dev (>= 2.6.6-3~), python3-all-dev
-Standards-Version: 3.8.2
-Homepage: http://www.linux-foundation.org/en/LSB
+Maintainer: Debian LSB Team <debian-lsb@lists.debian.org>
+Uploaders: Didier Raboud <odyx@debian.org>, Jeff Licquia <licquia@debian.org>
+Build-Depends: debhelper (>> 7.0.50~),
+ po-debconf (>= 0.5.0),
+ dpkg-dev (>= 1.10),
+ python-all-dev (>= 2.6.6-6~),
+X-Python-Version: >= 2.6
+Standards-Version: 3.9.4
+Homepage: http://www.linuxfoundation.org/collaborate/workgroups/lsb
+Vcs-Git: git://anonscm.debian.org/collab-maint/lsb.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/lsb.git
 
 Package: lsb-core
 Architecture: any
-Multi-Arch: foreign
-Depends: lsb-release, ${glibc}, libz1, libncurses5, libpam0g, lsb-invalid-mta | mail-transport-agent, at, bc, binutils, bsdmainutils, bsdutils, cpio, cron, ed, file, libc6-dev | libc-dev, locales, cups-bsd | lpr, lprng | cups-client, m4, mailx | mailutils, make, man-db, mawk | gawk, ncurses-term, passwd, patch, pax, procps, psmisc, rsync, alien (>= 8.36), python, ${python:Depends}, ${misc:Depends}, ${depends}, lsb-base, time
+Depends: lsb-release (>= ${source:Version}),
+ ${glibc},
+ libz1,
+ libncurses5,
+ libpam0g,
+ lsb-invalid-mta (>= ${source:Version}) | mail-transport-agent,
+ at,
+ bc,
+ binutils,
+ bsdmainutils,
+ bsdutils,
+ cpio,
+ cron | cron-daemon,
+ ed,
+ file,
+ libc6-dev | libc-dev,
+ locales,
+ cups-bsd | lpr,
+ lprng | cups-client,
+ m4,
+ mailutils | mailx,
+ make,
+ man-db,
+ mawk | gawk,
+ ncurses-term,
+ passwd,
+ patch,
+ pax,
+ procps,
+ psmisc,
+ rsync,
+ alien (>= 8.36),
+ ${python:Depends},
+ ${misc:Depends},
+ ${depends},
+ lsb-base (>= ${source:Version}),
+ lsb-security (>= ${source:Version}),
+ time
 Provides: lsb-core-noarch, ${provides}
-Conflicts: lsb (<< 2.0-2)
-Replaces: lsb (<< 2.0-2)
-Description: Linux Standard Base 4.0 core support package
+Description: Linux Standard Base 4.1 core support package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of the core of version 4.0 of
+ This package provides an implementation of the core of version 4.1 of
  the Linux Standard Base for Debian on the Intel x86, Intel ia64
  (Itanium), IBM S390, and PowerPC 32-bit architectures with the Linux
  kernel. Future revisions of the specification and this package may
@@ -33,15 +73,18 @@ Description: Linux Standard Base 4.0 core support package
 
 Package: lsb-graphics
 Architecture: any
-Depends: lsb-core, libgl1-mesa-glx | libgl1, libglu1-mesa | libglu1, libx11-6 | xlibs, ${misc:Depends}
-Conflicts: libutahglx1
+Depends: lsb-core (>= ${source:Version}),
+ libgl1-mesa-glx | libgl1,
+ libglu1-mesa | libglu1,
+ libx11-6 | xlibs,
+ ${misc:Depends}
 Provides: lsb-graphics-noarch, ${provides}
-Description: Linux Standard Base 4.0 graphics support package
+Description: Linux Standard Base 4.1 graphics support package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of version 4.0 of the Linux
+ This package provides an implementation of version 4.1 of the Linux
  Standard Base graphics specification for Debian on the Intel x86,
  Intel ia64 (Itanium), IBM S390, and PowerPC 32-bit architectures with
  the Linux kernel. Future revisions of the specification and this
@@ -55,14 +98,17 @@ Description: Linux Standard Base 4.0 graphics support package
 
 Package: lsb-cxx
 Architecture: any
-Depends: lsb-core, libstdc++6, ${misc:Depends}
-Provides: lsb-cxx-noarch, ${provides}
-Description: Linux Standard Base 4.0 C++ support package
+Depends: lsb-core (>= ${source:Version}),
+ libstdc++6,
+ ${misc:Depends}
+Provides: lsb-cxx-noarch,
+ ${provides}
+Description: Linux Standard Base 4.1 C++ support package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of version 4.0 of the Linux
+ This package provides an implementation of version 4.1 of the Linux
  Standard Base C++ (CXX) specification for Debian on the Intel x86,
  Intel ia64 (Itanium), IBM S390, and PowerPC 32-bit architectures with
  the Linux kernel. Future revisions of the specification and this
@@ -76,14 +122,42 @@ Description: Linux Standard Base 4.0 C++ support package
 
 Package: lsb-desktop
 Architecture: any
-Depends: lsb-graphics, fontconfig (>= 2.3.0), libfontconfig1 (>= 2.3.0), libpng12-0, libjpeg62, libglib2.0-0 (>= 2.8), libatk1.0-0 (>= 1.9.0), libpango1.0-0 (>= 1.8.0), libgtk2.0-0 (>= 2.8), libcairo2, libqt3-mt (>= 3.3.6), libqt4-gui (>= 4.3), libxml2, libfreetype6, libxrender1, libxtst6, libxft2, xdg-utils, libnss3-1d, libqt4-sql-sqlite, ${misc:Depends}
+Depends: lsb-graphics (>= ${source:Version}),
+ lsb-multimedia (>= ${source:Version}),
+ fontconfig (>= 2.6.0),
+ libfontconfig1 (>= 2.6.0),
+ libpng12-0,
+ libjpeg62-turbo,
+ libglib2.0-0 (>= 2.12.13),
+ libatk1.0-0 (>= 1.10.3),
+ libpango1.0-0 (>= 1.10.4),
+ libgtk2.0-0 (>= 2.10.14),
+ libcairo2 (>= 1.2.0),
+ libqtcore4,
+ libqtgui4,
+ libqt4-xml,
+ libqt4-opengl,
+ libqt4-sql,
+ libqt4-svg,
+ libqt4-network,
+ libqt4-sql-sqlite,
+ libxml2,
+ libfreetype6,
+ libxrender1,
+ libxtst6,
+ libxft2,
+ xdg-utils,
+ libnss3,
+ ${misc:Depends}
+# libqt4-sql-sqlite is Not strictly needed by LSB, but the tests want a valid database handler
+Recommends: libqt3-mt (>= 3:3.3.6)
 Provides: lsb-desktop-noarch, lsb-qt4, lsb-qt4-noarch, ${provides}
-Description: Linux Standard Base 4.0 Desktop support package
+Description: Linux Standard Base 4.1 Desktop support package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of version 4.0 of the Linux
+ This package provides an implementation of version 4.1 of the Linux
  Standard Base Desktop specification for Debian on the Intel x86,
  Intel ia64 (Itanium), IBM S390, and PowerPC 32-bit architectures with
  the Linux kernel. Future revisions of the specification and this
@@ -95,41 +169,22 @@ Description: Linux Standard Base 4.0 Desktop support package
  Standard Base, and should not be construed as a statement that Debian
  is LSB-compliant.
 
-Package: lsb-qt4
-Architecture: any
-Depends: lsb-desktop (>= 4.0), ${misc:Depends}
-Provides: lsb-qt4-noarch, ${provides}
-Description: Linux Standard Base 4.0 Qt4 support package
- The Linux Standard Base (http://www.linuxbase.org/) is a standard
- core system that third-party applications written for Linux can
- depend upon.
- .
- This package provides an implementation of version 4.0 of the Linux
- Standard Base Qt4 specification for Debian on the Intel x86, Intel
- ia64 (Itanium), IBM S390, and PowerPC 32-bit architectures with the
- Linux kernel. Future revisions of the specification and this package
- may support the LSB on additional architectures and kernels.
- .
- The intent of this package is to provide a best current practice way
- of installing and running LSB packages on Debian GNU/Linux. Its
- presence does not imply that Debian fully complies
- with the Linux Standard Base, and should not be construed as a
- statement that Debian is LSB-compliant.
- .
- The lsb-qt4 module appears to be deprecated upstream; this package is
- provided for compatibility with LSB 3.1 and may be dropped in
- subsequent releases.
-
 Package: lsb-languages
 Architecture: any
-Depends: lsb-core (>= 4.0), python (>= 2.4), perl (>= 5.8.8), perl (<< 6), ${misc:Depends}
+Depends: lsb-core (>= ${source:Version}),
+ python (>= 2.4),
+ perl (>= 5.8.8),
+ perl (<< 6),
+# Already deprecated in LSB4.1, but still required.
+ libpod-plainer-perl,
+ ${misc:Depends}
 Provides: lsb-languages-noarch, ${provides}
-Description: Linux Standard Base 4.0 Runtime Languages package
+Description: Linux Standard Base 4.1 Runtime Languages package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of version 4.0 of the Linux
+ This package provides an implementation of version 4.1 of the Linux
  Standard Base Languages specification for Debian on the Intel x86,
  Intel ia64 (Itanium), IBM S390, and PowerPC 32-bit architectures with
  the Linux kernel. Future revisions of the specification and this
@@ -143,14 +198,17 @@ Description: Linux Standard Base 4.0 Runtime Languages package
 
 Package: lsb-multimedia
 Architecture: any
-Depends: lsb-core (>= 4.0), libasound2, ${misc:Depends}
-Provides: lsb-multimedia-noarch, ${provides}
-Description: Linux Standard Base 4.0 Multimedia package
+Depends: lsb-core (>= ${source:Version}),
+ libasound2,
+ ${misc:Depends}
+Provides: lsb-multimedia-noarch,
+ ${provides}
+Description: Linux Standard Base 4.1 Multimedia package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of version 4.0 of the Linux
+ This package provides an implementation of version 4.1 of the Linux
  Standard Base Multimedia specification for Debian on the Intel x86,
  Intel ia64 (Itanium), IBM S390, and PowerPC 32-bit architectures with
  the Linux kernel. Future revisions of the specification and this
@@ -164,14 +222,20 @@ Description: Linux Standard Base 4.0 Multimedia package
 
 Package: lsb-printing
 Architecture: any
-Depends: lsb-core (>= 4.0), libcups2, libcupsimage2, foomatic-filters, ghostscript, ghostscript-cups, ${misc:Depends}
+Depends: lsb-core (>= ${source:Version}),
+ libcups2,
+ libcupsimage2,
+ foomatic-filters,
+ ghostscript,
+ cups-filters (>= 1.0.36) | ghostscript-cups,
+ ${misc:Depends}
 Provides: lsb-printing-noarch, ${provides}
-Description: Linux Standard Base 4.0 Printing package
+Description: Linux Standard Base 4.1 Printing package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of version 4.0 of the Linux
+ This package provides an implementation of version 4.1 of the Linux
  Standard Base Printing specification for Debian on the Intel x86,
  Intel ia64 (Itanium), IBM S390, and PowerPC 32-bit architectures with
  the Linux kernel. Future revisions of the specification and this
@@ -185,14 +249,18 @@ Description: Linux Standard Base 4.0 Printing package
 
 Package: lsb-security
 Architecture: any
-Depends: lsb-core (>= 4.0), libnss3-1d, libnspr4-0d
-Provides: lsb-security-noarch, ${provides}
-Description: Linux Standard Base 4.0 Security package
+Depends: libnss3,
+ libnspr4,
+ ${misc:Depends}
+Recommends: lsb-core (>= ${source:Version}),
+Provides: lsb-security-noarch,
+ ${provides}
+Description: Linux Standard Base 4.1 Security package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of version 4.0 of the Linux
+ This package provides an implementation of version 4.1 of the Linux
  Standard Base Security specification for Debian on the Intel x86,
  Intel ia64 (Itanium), IBM S390, and PowerPC 32-bit architectures with
  the Linux kernel. Future revisions of the specification and this
@@ -206,14 +274,19 @@ Description: Linux Standard Base 4.0 Security package
 
 Package: lsb
 Architecture: all
-Depends: lsb-core, lsb-graphics, lsb-cxx, lsb-desktop, lsb-printing, ${misc:Depends}
-Suggests: lsb-multimedia, lsb-languages
-Description: Linux Standard Base 4.0 support package
+Depends: lsb-core (>= ${source:Version}),
+ lsb-graphics (>= ${source:Version}),
+ lsb-cxx (>= ${source:Version}),
+ lsb-desktop (>= ${source:Version}),
+ lsb-printing (>= ${source:Version}),
+ lsb-languages (>= ${source:Version}),
+ ${misc:Depends}
+Description: Linux Standard Base 4.1 support package
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
  .
- This package provides an implementation of all modules of version 4.0
+ This package provides an implementation of all modules of version 4.1
  of the Linux Standard Base for Debian on the Intel x86, Intel ia64
  (Itanium), IBM S390, and PowerPC 32-bit architectures with the Linux
  kernel. Future revisions of the specification and this package may
@@ -228,11 +301,10 @@ Description: Linux Standard Base 4.0 support package
 Package: lsb-base
 Architecture: all
 Multi-Arch: foreign
-Depends: sed, ncurses-bin, ${misc:Depends}
-Replaces: lsb-core (<< 2.0-6), lsb (<< 2.0-6)
-Conflicts: lsb-core (<< 2.0-6), lsb (<< 2.0-6)
+Depends: ${misc:Depends}
+Pre-Depends: ${misc:Pre-Depends}
 Priority: required
-Description: Linux Standard Base 4.0 init script functionality
+Description: Linux Standard Base 4.1 init script functionality
  The Linux Standard Base (http://www.linuxbase.org/) is a standard
  core system that third-party applications written for Linux can
  depend upon.
@@ -243,8 +315,10 @@ Description: Linux Standard Base 4.0 init script functionality
 
 Package: lsb-release
 Architecture: all
+Priority: optional
 Multi-Arch: foreign
-Depends: ${python:Depends}, ${misc:Depends}
+Depends: ${python:Depends},
+ ${misc:Depends}
 Recommends: apt
 Suggests: lsb
 Description: Linux Standard Base version reporting utility
@@ -263,6 +337,7 @@ Description: Linux Standard Base version reporting utility
 
 Package: lsb-invalid-mta
 Architecture: all
+Depends: ${misc:Depends}
 Suggests: lsb
 Provides: mail-transport-agent
 Conflicts: mail-transport-agent
@@ -276,7 +351,7 @@ Description: Linux Standard Base sendmail dummy
  requiring an MTA to get installed, which once introduces a daemon which
  can cause security problems and second, users get asked questions about
  how they want their MTA configured when in reality they simply wanted to
- install a deskltop application or a printer driver, but the dependency on
+ install a desktop application or a printer driver, but the dependency on
  LSB compliance pulls in an MTA with the installation.
  .
  The LSB requirement on /usr/sbin/sendmail comes from old times where Linux
@@ -285,5 +360,5 @@ Description: Linux Standard Base sendmail dummy
  users use external e-mail services.
  .
  The /usr/sbin/sendmail always exits with exit status -1 (255) and sends a
- warning message to stderr, so that if a program actually tries to send e-mail 
+ warning message to stderr, so that if a program actually tries to send e-mail
  via the sendmail command the user gets note.
