--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ XSBC-Original-Maintainer: Chris Lawrence <lawrencc@debian.org>
 Build-Depends: debhelper (>> 7), po-debconf (>= 0.5.0), dpkg-dev (>= 1.10), python-all-dev (>= 2.6.6-3~), python3-all-dev
 Standards-Version: 3.8.2
 Homepage: http://www.linux-foundation.org/en/LSB
-XS-Pexip-Upstream: http://archive.ubuntu.com/ubuntu/ precise
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
 
 Package: lsb-core
 Architecture: any
