--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Standards-Version: 4.4.0
 Homepage: https://wiki.linuxfoundation.org/lsb/start
 Vcs-Browser: https://salsa.debian.org/debian/lsb
 Vcs-Git: https://salsa.debian.org/debian/lsb.git
-XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bookworm
 
 Package: lsb-base
 Architecture: all
